Describe your changes

--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,19 @@
-# 🌐 Server Configuration
+# Server
 PORT=3000
 
-# 🧠 MongoDB Connection String
-# Example for local setup or Docker container
+# MongoDB
 MONGO_URI=mongodb://localhost:27017/whatsapp_engine
 
-# 🔁 Redis Configuration
+# Redis
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
 REDIS_QUEUE=whatsapp:queue
 
-# 💾 WhatsApp Session Data Path
-# Local: ./data/.wwebjs_auth
-# Docker: /usr/src/app/data/.wwebjs_auth
+# WA Session Data (relative path OK)
 DATA_PATH=./data/.wwebjs_auth
 
-# 🧩 Chrome Executable Path (Optional)
-# Uncomment if you need a custom Chrome path
-# CHROME_PATH=/usr/bin/google-chrome-stable
+# Chrome Path (IMPORTANT)
+CHROME_PATH=C:\Program Files\Google\Chrome\Application\chrome.exe
 
-# 🧰 Node Environment
+# Environment
 NODE_ENV=development
