--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "esutils": "^2.0.3",
     "etag": "^1.8.1",
     "express": "^5.1.0",
+    "express-session": "^1.19.0",
     "extract-zip": "^2.0.1",
     "fast-fifo": "^1.3.2",
     "fd-slicer": "^1.1.0",
